# greek-snap

./: Application.hs  Foundation.hs  Import.hs  Model.hs  Procfile  Settings.hs  cabal.config  devel.hs  greek-snap.cabal  package.json
Handler/: Document.hs  Fay.hs  Home.hs  Split.hs  StopList.hs  Version.hs
Text/Greek/: Tokenize.hs
Text/XML/: Split.hs  Utils.hs
Yesod/: Fay.hs
config/: keter.yaml  models  postgresql.yml  routes  settings.yml
deploy/: Procfile
fay/: Home.hs  Split.hs
fay-shared/: SharedTypes.hs
greek-utils/: CountTokens.hs  Db.hs  IndexDb.hs  IndexXml.hs  LoadFile.hs  Utils.hs  cabal.config  greek-utils.cabal
greek-utils/IndexXml/: Context.hs  Index.hs  Lens.hs  Opts.hs  Output.hs  Types.hs  Utils.hs
snaplets/fay/: devel.cfg
snaplets/fay/js/: split.js
snaplets/fay/src/: split.hs
snaplets/heist/templates/: _navbar.tpl  base.tpl  document.tpl  document_list.tpl  hello.tpl  index.tpl  split_done.tpl  split_form.tpl
snaplets/persist/: devel.cfg
src/: Application.hs  Model.hs  Site.hs  Splices.hs  Utils.hs
src/Handler/: Document.hs  Split.hs
src/XML/: Split.hs
static/: faygen-dfXClK-q.js
static/css/: main.css
templates/: default-layout-wrapper.hamlet  default-layout.hamlet  document.hamlet  document_list.hamlet  split.hamlet  split.julius  split_done.hamlet  split_done.julius  split_form.hamlet  stop_list.hamlet  stop_list_form.hamlet  version.hamlet
