name:              greek-snap
version:           0.3.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: .
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Document
                     Handler.Home
                     Handler.Split
                     Handler.StopList
                     Handler.Version
                     Text.Greek.Tokenize
                     Text.XML.Split
                     Text.XML.Utils
                     Paths_greek_snap

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                RankNTypes
                DeriveDataTypeable

    build-depends: base                          >= 4          && < 5
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , bytestring
                 , text
                 , persistent
                 , persistent-postgresql
                 , persistent-template
                 , template-haskell
                 , hamlet
                 , shakespeare
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , conduit-combinators
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , transformers
                 , unordered-containers
                 , hashable
                 , dlist
                 , errors
                 , blaze-builder
                 , xml-types
                 , xml-conduit
                 , system-filepath
                 , lens
                 , zip-archive
                 , time
                 , heroku
                 , text-icu

executable         greek-snap
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , greek-snap
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , greek-snap
                 , yesod-test
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
